--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-external-link": "^1.1.1",
+    "react-icons": "^3.11.0",
     "react-scripts": "4.0.0",
     "react-typed": "^1.2.0",
     "web-vitals": "^0.2.4"
